client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client-deployment
  template:
    metadata:
      labels:
        app: client-deployment
    spec:
      containers:
      - name: client-deployment
        image: tuanminh009/iot-fe:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
